--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
+        "dev": "nodemon index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "coffeegom",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "^1.19.1",
         "express": "^4.17.2",
         "mongoose": "^6.2.1"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.15"
     }
 }
