--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "cookie-parser": "^1.4.6",
         "express": "^4.17.2",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.2.1"
+        "mongoose": "^6.2.1",
+        "react-router-dom": "^6.2.1"
     },
     "devDependencies": {
         "nodemon": "^2.0.15"
