--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node index.js",
-        "dev": "nodemon index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node server/index.js",
+        "dev": "nodemon server/index.js",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "all": "concurrently \"npm run dev\" \"npm run start --prefix client\""
     },
     "author": "coffeegom",
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.0.1",
         "body-parser": "^1.19.1",
+        "concurrently": "^7.0.0",
         "cookie-parser": "^1.4.6",
         "express": "^4.17.2",
         "jsonwebtoken": "^8.5.1",
